--- a/teetime/app/globals.css
+++ b/teetime/app/globals.css
@@ -26,7 +26,7 @@ img {
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb)); */
   background: linear-gradient(to bottom,
       transparent,
       rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
